--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,7 +96,7 @@ input, select, textarea {
 
 	body {
 		/* background: #1b1f22; */
-		background-image: url("../../images/background.jpg");
+		background: url("../../images/background.jpg");
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -647,7 +647,8 @@ input, select, textarea {
 
 		.image:before {
 			pointer-events: none;
-			background-image: url("../../images/background.jpg");
+			/*background-image: url("../../images/background.jpg");*/
+			background-image: url("../../images/overlay.png");
 			background-color: rgba(19, 21, 25, 0.5);
 			border-radius: 4px;
 			content: '';
