--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -647,8 +647,7 @@ input, select, textarea {
 
 		.image:before {
 			pointer-events: none;
-			/*background-image: url("../../images/background.jpg");*/
-			background-image: url("../../images/overlay.png");
+			background-image: url("../../images/pic01.jpg");
 			background-color: rgba(19, 21, 25, 0.5);
 			border-radius: 4px;
 			content: '';
