--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1140,7 +1140,7 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background-image: url("../../images/background.jpg");
+			background-image: url("../../images/overlay.png");
 			background-size: auto,
 256px 256px;
 			background-position: center,
@@ -1256,6 +1256,7 @@ input, select, textarea {
 		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
+		/* MAIN PAGE BACKGROUND */
 		background-image: url("../../images/background.jpg");
 		background-size: cover;
 		background-repeat: no-repeat;
