--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,7 +96,8 @@ input, select, textarea {
 
 	body {
 		/* background: #1b1f22; */
-		background: url("../../images/background.jpg");
+		/* MAIN PAGE BACKGROUND */
+		background: url("../../images/overlay.png");
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
