--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,7 +97,7 @@ input, select, textarea {
 	body {
 		/* background: #1b1f22; */
 		/* MAIN PAGE BACKGROUND */
-		background: url("../../images/overlay.png");
+		background: url("../../images/pic03.jpg");
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -1160,7 +1160,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/overlay.png");
+			background-image: url("../../images/background.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -1256,7 +1256,7 @@ input, select, textarea {
 		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		/* MAIN PAGE BACKGROUND */
+		/* HEADER BACKGROUND */
 		background-image: url("../../images/background.jpg");
 		background-size: cover;
 		background-repeat: no-repeat;
