--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,9 +95,11 @@ input, select, textarea {
 	}
 
 	body {
-		/* background: #1b1f22; */
 		/* MAIN PAGE BACKGROUND */
 		background: url("../../images/background.jpg");
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center center;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
