--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,7 +96,7 @@ input, select, textarea {
 
 	body {
 		/* MAIN PAGE BACKGROUND */
-		background: url("../../images/background.jpg");
+		background: url("../../images/backgrounds/background.jpg");
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-position: center center;
@@ -650,7 +650,7 @@ input, select, textarea {
 
 		.image:before {
 			pointer-events: none;
-			background-image: url("../../images/pic01.jpg");
+			background-image: url("../../images/overlay.png");
 			background-color: rgba(19, 21, 25, 0.5);
 			border-radius: 4px;
 			content: '';
@@ -1162,7 +1162,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/background.jpg");
+			background-image: url("../../images/backgrounds/background.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
