--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,6 +212,7 @@ input, select, textarea {
 		font-size: 1.5rem;
 		line-height: 1.4;
 		letter-spacing: 0.5rem;
+		word-wrap: break-word;
 	}
 
 	h3 {
