--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,6 +213,7 @@ input, select, textarea {
 		line-height: 1.4;
 		letter-spacing: 0.5rem;
 		word-wrap: break-word;
+		white-space: normal;
 	}
 
 	h3 {
