--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -242,6 +242,8 @@ input, select, textarea {
 		h2 {
 			font-size: 1.25em;
 			line-height: 1.5;
+			word-wrap: break-word;
+			white-space: normal;
 		}
 
 	}
