--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,6 +200,8 @@ input, select, textarea {
 			width: max-content;
 			padding-bottom: 0.5rem;
 			margin: 0 0 2rem 0;
+			word-wrap: break-word;
+			white-space: normal;
 		}
 
 	h1 {
