--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -192,6 +192,8 @@ input, select, textarea {
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 			color: inherit;
 			text-decoration: none;
+			word-wrap: break-word;
+			white-space: normal;
 		}
 
 		h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
